css/admin.css
body{
  background  : #fff;
}

#main-admin{
  border      : 1px solid #ccc;
  background  : #f6f6f6;
  margin      : 10px;
}

#menu .selected{
  font-weight : bold;
  color       : #000;
}

.content .wrapper h3{
  margin  : 10px 0 0 0;
}

.group{
  border      : 1px solid #ccc;
  background  : #fff;
  width       : 300px;
  margin      : 5px 0;
}
.group h4{
  background    : lightblue;
  margin        : 0;
  margin-bottom : 5px;
  padding       : 2px 5px;
  color         : #333;
}
.group h4 b{
  color : red;
}
.group .face{
  border-width        : 0;
  border-bottom-width : 1px;
  margin              : 0;
}


.allocation-table{
  border      : 1px solid #ccc;
  background  : #fff;
  margin      : 5px auto;
  padding     : 2px;
}
.allocation-table td{
  border-bottom : 1px solid #ccc;
  padding       : 1px 3px;
}
.allocation-table td:first-child{
  border-right  : 1px solid #ccc;
}
.allocation-table .even{
  background  : #E3F2FF;
}
.small-group{
  display     : block;
  padding     : 1px 0;
}
.small-group .total{
  display     : inline-block;
  background  : lightgreen;
  padding     : 0 4px;
  font-weight : bold;
}

